// EvoMarket — 23 bảng MySQL (sau migration 20260623120100)
// Đồng bộ 100% với Sequelize models + Chương 4 đồ án

Table users {
    id                       int [primary key, increment, note: 'MySQL: Users']
    fullname                 varchar(100)
    email                    varchar(150) [unique]
    phone_number             varchar(20) [unique]
    password                 varchar(255)
    role                     enum('buyer', 'seller', 'admin') [default: 'buyer']
    account_status           enum('ACTIVE', 'LOCKED') [default: 'ACTIVE']
    avatar                   varchar(500)
    birthday                 date
    gender                   varchar(20)
    shop_name                varchar(120)
    notification_preferences json
    created_at               datetime [not null]
}

Table refresh_tokens {
    id          int [primary key, increment, note: 'MySQL: RefreshTokens']
    token       varchar(255) [not null]
    user_id     int [not null]
    expires_at  datetime [not null]
    is_revoked  boolean [default: false]
    device_info varchar(255)
    created_at  datetime [not null]
    updated_at  datetime [not null]
}

Table user_addresses {
    id                 int [primary key, increment, note: 'MySQL: UserAddresses']
    user_id            int
    label              varchar(100)
    recipient_fullname varchar(100)
    recipient_phone    varchar(20)
    address            varchar(200)
    city               varchar(50)
    state              varchar(50)
    country            varchar(50)
    zipcode            varchar(20)
    is_default         boolean
}

Table user_notifications {
    id         int [primary key, increment]
    user_id    int [not null]
    type       varchar(64) [not null]
    title      varchar(255) [not null]
    message    text
    metadata   json
    read_at    datetime
    created_at datetime [not null]
    updated_at datetime [not null]
}

Table categories {
    id   int [primary key, increment, note: 'MySQL: Categories']
    name varchar(100) [unique]
}

Table products {
    id           int [primary key, increment, note: 'MySQL: Products']
    category_id  int
    seller_id    int
    title        varchar(250)
    price        int
    import_price int [default: 0]
    thumbnail    varchar(500)
    images       text
    description  text
    deleted      boolean [default: false]
    total_stock  int [default: 0]
    sold         int [default: 0]
    available    int [default: 0]
    created_at   datetime
    updated_at   datetime
}

Table product_variants {
    id         int [primary key, increment, note: 'MySQL: ProductVariants']
    product_id int
    size       varchar(50)
    color      varchar(50)
    stock      int [default: 0]
}

Table product_tryon_instances {
    id               int [primary key, increment, note: 'MySQL: ProductTryonInstances']
    product_id       int [not null]
    model_url        varchar(500)
    anchor_index     int
    transform_config json
}

Table product_impression_stats {
    product_id  int [primary key, note: 'MySQL: ProductImpressionStats — PK = product_id']
    impressions int [not null, default: 0, note: 'UNSIGNED — n_i UCB1']
    clicks      int [not null, default: 0, note: 'UNSIGNED — r_i UCB1']
    updated_at  datetime [not null]
}

Table cart {
    id         int [primary key, increment, note: 'MySQL: Cart']
    user_id    int
    product_id int
    variant_id int
    quantity   int [default: 1]
    added_at   datetime
}

Table coupons {
    id             int [primary key, increment, note: 'MySQL: Coupons']
    code           varchar(50) [unique]
    discount_type  enum('Percentage', 'Fixed')
    discount_value decimal(10,2)
    min_order_value decimal(10,2)
    max_uses       int
    used_count     int [default: 0]
    start_date     datetime
    end_date       datetime
    seller_id      int [note: 'NULL = mã sàn; khác NULL = mã shop']
    new_user_only  boolean [default: false]
    created_at     datetime
}

Table coupon_redemptions {
    id         int [primary key, increment, note: 'MySQL: CouponRedemptions']
    coupon_id  int [not null]
    user_id    int [not null]
    order_id   int [not null]
    created_at datetime [not null]
}

Table orders {
    id                 int [primary key, increment, note: 'MySQL: Orders']
    user_id            int
    fullname           varchar(100)
    email              varchar(150)
    phone              varchar(20)
    address            varchar(250)
    total_price        int
    coupon_id          int
    coupon_discount    int [default: 0]
    shipping_fee       int [default: 0]
    shipping_method_ui varchar(20) [default: 'standard']
    payment_method     enum('COD', 'Online')
    status             varchar(40) [not null, default: 'PENDING_CONFIRMATION']
    carrier_name       varchar(120)
    tracking_number    varchar(120)
    shipped_at         datetime
    buyer_note         varchar(500)
    created_at         datetime
    updated_at         datetime
}

Table order_items {
    id                   int [primary key, increment, note: 'MySQL: OrderItems']
    order_id             int
    product_id           int
    variant_id           int
    seller_id            int
    quantity             int
    total_price          int
    selling_price        int [default: 0]
    import_price         int [default: 0]
    platform_fee         int [default: 0]
    platform_fee_percent decimal(5,2) [default: 0]
    product_title        varchar(250)
    product_thumbnail    varchar(500)
    variant_name         varchar(250)
}

Table order_status_histories {
    id          int [primary key, increment]
    order_id    int [not null]
    from_status varchar(40)
    to_status   varchar(40) [not null]
    actor_type  enum('buyer', 'seller', 'system') [not null]
    actor_id    int
    note        varchar(500)
    metadata    json
    created_at  datetime [not null]
}

Table payments {
    id                     int [primary key, increment, note: 'MySQL: Payments']
    order_id               int
    user_id                int
    amount                 int
    method                 enum('COD', 'Online')
    status                 enum('Success', 'Failed', 'Pending')
    vnpay_transaction_no   varchar(32)
    vnpay_transaction_date varchar(20)
    refunded_at            datetime
    created_at             datetime
}

Table refunds {
    id         int [primary key, increment, note: 'MySQL: Refunds']
    payment_id int
    user_id    int
    order_id   int
    amount     int
    reason     varchar(255)
    status     enum('Pending', 'Approved', 'Rejected')
    created_at datetime
}

Table reviews {
    id            int [primary key, increment, note: 'MySQL: Reviews']
    user_id       int
    product_id    int
    order_id      int
    order_item_id int [unique]
    rating        int
    comment       text
    is_reported   boolean [default: false]
    report_reason varchar(255)
    report_status enum('Pending', 'Reviewed', 'Rejected')
    created_at    datetime
}

Table conversations {
    id              int [primary key, increment, note: 'MySQL: Conversations']
    user1_id        int [not null]
    user2_id        int [not null]
    last_message    text
    last_message_at datetime
    created_at      datetime
}

Table messages {
    id              int [primary key, increment, note: 'MySQL: Messages']
    conversation_id int [not null]
    sender_id       int [not null]
    content         text [not null]
    message_type    enum('text', 'image', 'audio', 'file') [default: 'text']
    media_url       varchar(255)
    is_read         boolean [default: false]
    created_at      datetime
}

Table seller_shop_follows {
    id          int [primary key, increment, note: 'MySQL: SellerShopFollows']
    seller_id   int [not null]
    follower_id int [not null]
    created_at  datetime [not null]

    indexes {
        (seller_id, follower_id) [unique]
    }
}

Table seller_shop_visits {
    id          int [primary key, increment, note: 'MySQL: SellerShopVisits']
    seller_id   int [not null]
    visit_date  date [not null]
    visitor_key varchar(64) [not null, note: 'u:<userId> hoặc a:<uuid>']
    created_at  datetime [not null]

    indexes {
        (seller_id, visit_date, visitor_key) [unique]
    }
}

Table platform_config {
    id           int [primary key, increment, note: 'MySQL: PlatformConfig']
    config_key   varchar(100) [unique, not null]
    config_value text
    created_at   datetime
    updated_at   datetime
}

// ── Quan hệ khóa ngoại ──────────────────────────────────────────────

Ref: users.id < refresh_tokens.user_id
Ref: users.id < user_addresses.user_id
Ref: users.id < user_notifications.user_id
Ref: users.id < orders.user_id
Ref: users.id < cart.user_id
Ref: users.id < payments.user_id
Ref: users.id < refunds.user_id
Ref: users.id < reviews.user_id
Ref: users.id < products.seller_id
Ref: users.id < order_items.seller_id
Ref: users.id < coupons.seller_id
Ref: users.id < coupon_redemptions.user_id
Ref: users.id < conversations.user1_id
Ref: users.id < conversations.user2_id
Ref: users.id < messages.sender_id
Ref: users.id < seller_shop_follows.seller_id
Ref: users.id < seller_shop_follows.follower_id
Ref: users.id < seller_shop_visits.seller_id

Ref: categories.id < products.category_id
Ref: products.id < product_variants.product_id
Ref: products.id < product_tryon_instances.product_id
Ref: products.id - product_impression_stats.product_id
Ref: products.id < reviews.product_id
Ref: products.id < order_items.product_id
Ref: products.id < cart.product_id

Ref: product_variants.id < cart.variant_id
Ref: product_variants.id < order_items.variant_id

Ref: coupons.id < orders.coupon_id
Ref: coupons.id < coupon_redemptions.coupon_id

Ref: orders.id < order_items.order_id
Ref: orders.id < payments.order_id
Ref: orders.id < refunds.order_id
Ref: orders.id < order_status_histories.order_id
Ref: orders.id < coupon_redemptions.order_id
Ref: orders.id < reviews.order_id

Ref: payments.id < refunds.payment_id
Ref: order_items.id < reviews.order_item_id
Ref: conversations.id < messages.conversation_id
